# io-addressbook

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  default.nix  flake.nix  package.nix  shell.nix
addressbook-carddav/: Cargo.toml  README.md
addressbook-carddav-native-tls/: Cargo.toml  README.md
addressbook-carddav-native-tls/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-carddav-native-tls/src/: lib.rs
addressbook-carddav-rustls/: Cargo.toml  README.md
addressbook-carddav-rustls/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-carddav-rustls/src/: lib.rs
addressbook-carddav/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-carddav/src/: lib.rs
addressbook-lib/: CHANGELOG.md  Cargo.toml
addressbook-lib/src/: lib.rs  types.rs
addressbook-lib/src/carddav/: addressbook-home-set.rs  client.rs  config.rs  create-addressbook.rs  create-card.rs  current-user-principal.rs  delete-addressbook.rs  delete-card.rs  list-addressbooks.rs  list-cards.rs  list-cards.xml  mod.rs  read-card.rs  response.rs  update-addressbook.rs
addressbook-lib/src/carddav/flow/: addressbook-home-set.rs  create-addressbook.rs  create-card.rs  current-user-principal.rs  delete-addressbook.rs  delete-card.rs  list-addressbooks.rs  list-cards.rs  mod.rs  read-card.rs  update-addressbook.rs
addressbook-lib/src/carddav/http/: mod.rs  request.rs  send.rs  state.rs
addressbook-lib/src/carddav/http/flow/: mod.rs  send-request.rs
addressbook-lib/src/carddav/sans-io/: flow-addressbook-delete.rs  flow-addressbooks-list.rs  flow-card-create.rs  flow-card-read.rs
addressbook-lib/src/carddav/tcp/: io-state.rs  mod.rs  state.rs
addressbook-lib/src/http/: flow-send-receive.rs  mod.rs  request.rs  send.rs
addressbook-lib/src/tcp/: flow.rs  mod.rs
addressbook-lib/src/vdir/: client.rs  config.rs  constants.rs  create-addressbook.rs  create-card.rs  delete-addressbook.rs  delete-card.rs  fs.rs  list-addressbooks.rs  list-cards.rs  mod.rs  read-card.rs  update-addressbook.rs  update-card.rs
addressbook-lib/src/vdir/flow/: create-addressbook.rs  create-card.rs  delete-addressbook.rs  delete-card.rs  list-addressbooks.rs  list-cards.rs  mod.rs  read-card.rs  update-addressbook.rs  update-card.rs
addressbook-lib/src/vdir/fs/: io.rs  mod.rs  state.rs
addressbook-std/: Cargo.toml  README.md
addressbook-std-native-tls/: Cargo.toml  README.md
addressbook-std-native-tls/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-std-native-tls/src/: lib.rs
addressbook-std-rustls/: Cargo.toml  README.md
addressbook-std-rustls/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-std-rustls/src/: lib.rs
addressbook-std/examples/: crud-addressbook.rs  crud-card.rs  discovery.rs  list-addressbooks.rs
addressbook-std/src/: lib.rs
addressbook-vdir/: Cargo.toml  README.md
addressbook-vdir/examples/: crud-addressbook.rs  crud-card.rs  list-addressbooks.rs
addressbook-vdir/src/: lib.rs
examples/: std-carddav-discovery.rs  std-rustls.rs  std.rs
src/: addressbook.rs  card.rs  cli.rs  client.rs  config.rs  contact.rs  lib.rs  main.rs
src/account/: config.rs
src/addressbook/: mod.rs  types.rs
src/addressbook/command/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/addressbook/vdir/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/addressbook/webdav/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/card/: mod.rs  types.rs
src/card/command/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/card/vdir/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/card/webdav/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/carddav/: client.rs  config.rs  current-user-principal.rs  mod.rs  request.rs  response.rs  serde.rs  tcp.rs
src/carddav/coroutines/: addressbook-home-set.rs  create-addressbook.rs  create-card.rs  current-user-principal.rs  delete-addressbook.rs  delete-card.rs  follow-redirects.rs  list-addressbooks.rs  list-cards.rs  mod.rs  read-card.rs  send.rs  update-addressbook.rs  update-card.rs  well-known.rs
src/carddav/flow/: addressbook-home-set.rs  create-addressbook.rs  create-card.rs  current-user-principal.rs  delete-addressbook.rs  list-addressbooks.rs  list-cards.rs  read-card.rs  update-card.rs
src/carddav/http/flow/: send-request.rs
src/carddav/sans-io/: flow-addressbook-create.rs  flow-addressbook-create.xml  flow-addressbook-delete.rs  flow-addressbook-home-set.rs  flow-addressbook-update.rs  flow-addressbooks-list.rs  flow-addressbooks.rs  flow-card-create.rs  flow-card-delete.rs  flow-card-read.rs  flow-card-update.rs  flow-cards-list.rs  flow-contact-list.rs  flow-current-user-principal.rs  flow.rs  mod.rs
src/completion/: command.rs
src/http/: mod.rs
src/http/sans-io/: flow-send-receive.rs  mod.rs  request.rs  state.rs
src/manual/: command.rs
src/tcp/: mod.rs  std.rs
src/tcp/sans-io/: flow-read.rs  flow-write.rs  flow.rs  io.rs  mod.rs
src/tls/: std.rs
src/vdir/: client.rs  convert.rs  mod.rs
src/vdir/coroutines/: create-addressbook.rs  create-card.rs  delete-addressbook.rs  delete-card.rs  list-addressbooks.rs  list-cards.rs  mod.rs  read-card.rs  update-addressbook.rs  update-card.rs
src/webdav/: client.rs  convert.rs  mod.rs
tests/: std-carddav.rs  std-vdir.rs
