[workspace]
resolver = "2"
members = [
  "addressbook-carddav",
  "addressbook-carddav-native-tls",
  "addressbook-carddav-rustls",
  "addressbook-lib",
  "addressbook-vdir",
]

[patch.crates-io]
addressbook-carddav-native-tls.path = "./addressbook-carddav-native-tls"
addressbook-carddav-rustls.path = "./addressbook-carddav-rustls"
addressbook-carddav.path = "./addressbook-carddav"
addressbook-vdir.path = "./addressbook-vdir"
addressbook.path = "./addressbook-lib"
