[package]
name = "addressbook-carddav-native-tls"
description = "Standard CardDAV I/O connector over native TLS for addressbook-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "native-tls"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/addressbook-carddav-native-tls/latest/addressbook_carddav_native_tls/"
repository = "https://github.com/pimalaya/addressbook/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
vendored = ["native-tls/vendored"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
addressbook = { version = "0.1", default-features = false, features = ["carddav"] }
native-tls = "0.2"
thiserror = "2"
