[package]
name = "addressbook-carddav-rustls"
description = "Standard CardDAV I/O connector over Rustls for addressbook-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "rustls"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/addressbook-carddav-rustls/latest/addressbook_carddav_rustls/"
repository = "https://github.com/pimalaya/addressbook/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["ring"]
aws-lc = ["rustls/aws_lc_rs"]
ring = ["rustls/ring"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
addressbook = { version = "0.1", default-features = false, features = ["carddav"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
rustls-platform-verifier = "0.5"
thiserror = "2"
tracing = "0.1"
