[package]
name = "addressbook-carddav"
description = "Standard CardDAV I/O connector for addressbook-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "std"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/addressbook-carddav/latest/addressbook_carddav/"
repository = "https://github.com/pimalaya/addressbook/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
	     
[dev-dependencies]
addressbook-carddav = { path = ".", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
addressbook = { version = "0.1", features = ["carddav"] }
