[package]
name = "addressbook"
description = "Rust library to manage contacts"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "webdav"]
homepage = "https://pimalaya.org/"
documentation = "https://github.com/pimalaya/addressbook-lib/"
repository = "https://github.com/pimalaya/addressbook-lib/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
addressbook = { path = ".", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
base64 = { version = "0.22", features = [] }
chrono = { version = "0.4", features = [] }
memchr = { version = "2.7.4", features = [] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", features = [] }
tracing = { version = "0.1", features = [] }
uuid = { version = "1", features = ["v4"] }
vparser = { version = "1", features = [] }
secrecy = { version = "0.10", features = [] }
