[package]
name = "addressbook"
description = "Rust library to manage contacts"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "webdav"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/addressbook/latest/addressbook/"
repository = "https://github.com/pimalaya/addressbook/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["carddav", "vdir"]
carddav = ["dep:base64", "dep:chrono", "dep:memchr", "dep:quick-xml", "dep:secrecy", "dep:thiserror"]
vdir = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", optional = true }
memchr = { version = "2.7.4", optional = true }
quick-xml = { version = "0.37", features = ["serialize"], optional = true }
secrecy = { version = "0.10", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2", optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
vparser = "1"
