[package]
name = "addressbook-std"
description = "Standard I/O connector for addressbook-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "carddav", "webdav"]
homepage = "https://pimalaya.org/"
documentation = "https://github.com/pimalaya/addressbook-lib/"
repository = "https://github.com/pimalaya/addressbook-lib/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dev-dependencies]
addressbook-std = { path = ".", features = [] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
addressbook = { version = "0.1", features = [] }
