[package]
name = "addressbook-vdir"
description = "Standard vdir I/O connector for addressbook-lib"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = ["lib", "contact", "addressbook", "vdir", "std"]
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/addressbook-vdir/latest/addressbook_vdir/"
repository = "https://github.com/pimalaya/addressbook/"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
	     
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies]
addressbook = { version = "0.1", features = ["vdir"] }
tracing = "0.1"
